# systemkraft

./: .env.example  Cargo.toml  GETTING_STARTED.md  LICENSE  README.md  SERVICES.md
migrations/: 0001_create_service_categories.sql  0002_create_services.sql  0003_create_clients.sql  0004_create_engagements.sql  0005_create_case_studies.sql  0006_create_inquiries.sql
seeds/: mansour_demo.sql  systemkraft_demo.sql
src/: case_study.rs  client.rs  engagement.rs  inquiry.rs  main.rs  service.rs  service_category.rs
static/css/: main.css
static/js/: main.js
templates/: assessment.html  dashboard_preview.html  home.html  investment.html
