[package]
name = "mansour"
version = "0.1.0"
edition = "2021"
publish = false
description = "Rust systems, security & admin platforms — services for Swedish companies"

[dependencies]
# Pinned to the published crate so the repo builds standalone after a clean
# `git clone` — no sibling checkout required.
#
# Model files depend on `rustio-admin` ALONE — field types (`Decimal`,
# `DateTime`, `Utc`, …) and the derive macro's generated code resolve through
# the framework's re-exports, so `chrono` / `sqlx` are not declared here.
# What remains is this binary's own runtime: the async runtime, .env loading,
# and logging.
rustio-admin = "0.30"
tokio        = { version = "1", features = ["macros", "rt-multi-thread"] }
dotenvy      = "0.15"
env_logger   = "0.11"
log          = "0.4"

# Standalone workspace (own Cargo.lock); not a member of the framework
# workspace, exactly like examples/shop and examples/clinic.
[workspace]
